--- a/.github/workflows/build-google-kernel.yml
+++ b/.github/workflows/build-google-kernel.yml
@@ -2,8 +2,6 @@ name: Build Google Pixel 7 Kernel
 
 on:
   workflow_dispatch:       # run manually from the Actions tab
-  # push:
-  #   branches: [ main ]
 
 jobs:
   build:
@@ -13,6 +11,7 @@ jobs:
       MANIFEST_URL: https://android.googlesource.com/kernel/manifest
       # Pixel 7 / 7 Pro, Tensor G2, 6.1 kernel, Android 16
       MANIFEST_BRANCH: android-gs-pantah-6.1-android16
+      KERNEL_ROOT: ${{ runner.temp }}/google-kernel
 
     steps:
       - name: Checkout this repo
@@ -33,23 +32,30 @@ jobs:
 
       - name: Sync Google Pixel 7 kernel tree via repo
         run: |
-          mkdir -p $HOME/google-kernel
-          cd $HOME/google-kernel
+          mkdir -p "$KERNEL_ROOT"
+          cd "$KERNEL_ROOT"
 
           repo init -u "$MANIFEST_URL" -b "$MANIFEST_BRANCH" --depth=1
           repo sync -c --no-tags --jobs=4
 
       - name: Build Pixel 7 kernel (pantah)
         run: |
-          cd $HOME/google-kernel
-          # build core kernel from source, not prebuilt
+          cd "$KERNEL_ROOT"
+          # Build core kernel from source (not prebuilt)
           export BUILD_AOSP_KERNEL=1
           ./build_pantah.sh
+
+      # Optional debug: list out directory so you can see what's there
+      - name: List out directory
+        run: |
+          cd "$KERNEL_ROOT"
+          echo "===== out/ tree (depth 3) ====="
+          find out -maxdepth 3 -type f || echo "no out/ yet?"
 
       - name: Upload kernel artifacts
         uses: actions/upload-artifact@v4
         with:
           name: pixel7-kernel-dist
-          path: |
-            $HOME/google-kernel/out/**/dist/*
+          # For v5.15+ Pixel kernels: out/DEVICE/dist, here DEVICE=pantah
+          path: ${{ env.KERNEL_ROOT }}/out/pantah/dist/*
           if-no-files-found: error
